Completed the function of bringing heroes from the Marvel API Server by applying the module architecture. (Marvel API : https://developer.marvel.com)

--- a/feature/avengers/src/main/res/values/strings.xml
+++ b/feature/avengers/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="main_1">Avengers</string>
+    <!-- Ui Button -->
+    <string name="hero_btn_add_to_my_favorites">Add to My Favorites</string>
 </resources>
